# sogen

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  MANIFEST.in  Makefile  README.md  pyproject.toml
src/: CMakeLists.txt
src/analyzer/: CMakeLists.txt  analysis.cpp  analysis.hpp  analysis_event.hpp  analysis_reporter.cpp  analysis_reporter.hpp  analysis_reporter_common.hpp  console_reporter.cpp  disassembler.cpp  disassembler.hpp  jsonl_reporter.hpp  main.cpp  object_watching.hpp  reflect_extension.hpp  reflect_type_info.hpp  resource.rc  snapshot.cpp  snapshot.hpp  tenet_tracer.cpp  tenet_tracer.hpp  test.py
src/analyzer-launcher/: CMakeLists.txt
src/backend-selection/: CMakeLists.txt  backend_selection.cpp  backend_selection.hpp
src/backends/: CMakeLists.txt
src/common/: CMakeLists.txt
src/debugger/: CMakeLists.txt  debug_session.cpp  debug_session.hpp  event_handler.cpp  event_handler.hpp  events.fbs  events_generated.hxx  message_transmitter.cpp  message_transmitter.hpp
src/disassembler/: CMakeLists.txt  disassembler.cpp  disassembler.hpp
src/emulator/: CMakeLists.txt  address_utils.hpp  arch_emulator.hpp  binary_writer.hpp  cpu_interface.hpp  emulator.hpp  function_calling_convention.hpp  generic_logger.hpp  hook_interface.hpp  logger.cpp  logger.hpp  memory_interface.hpp  memory_permission.hpp  memory_region.hpp  scoped_hook.hpp  serialization.hpp  serialization_helper.hpp  stop_reason.hpp  typed_cpu.hpp  typed_emulator.hpp  x86_register.hpp
src/emulator-platform/: CMakeLists.txt  segment_utils.hpp
src/fuzzer/: CMakeLists.txt  main.cpp
src/fuzzing-engine/: CMakeLists.txt  fuzzer.cpp  fuzzer.hpp  input_generator.cpp  input_generator.hpp  random_generator.cpp  random_generator.hpp
src/gdb-stub/: CMakeLists.txt  async_handler.cpp  async_handler.hpp  checksum.hpp  connection_handler.cpp  connection_handler.hpp  filesystem_interface.hpp  gdb_fs.cpp  gdb_fs.hpp  gdb_stub.cpp  gdb_stub.hpp  stream_processor.cpp  stream_processor.hpp
src/gpu-bridge-protocol/: CMakeLists.txt  gpu_bridge_protocol.hpp  vk_feature_chain.hpp
src/linux-analyzer/: CMakeLists.txt  main.cpp
src/linux-debugger/: CMakeLists.txt  linux_event_handler.cpp  linux_event_handler.hpp
src/linux-emulator/: CMakeLists.txt  linux_emulator.cpp  linux_emulator.hpp  linux_emulator_callbacks.hpp  linux_emulator_utils.hpp  linux_fd_table.cpp  linux_fd_table.hpp  linux_file_system.hpp  linux_logger.hpp  linux_memory_manager.cpp  linux_memory_manager.hpp  linux_process_context.cpp  linux_process_context.hpp  linux_socket.hpp  linux_stat.hpp  linux_syscall_dispatcher.cpp  linux_syscall_dispatcher.hpp  linux_syscall_info.cpp  linux_syscall_info.hpp  linux_syscall_numbers.hpp  linux_syscall_utils.hpp  linux_thread.hpp  procfs.cpp  procfs.hpp  signal_dispatch.cpp  signal_dispatch.hpp  std_include.hpp  vdso.cpp  vdso.hpp
src/linux-emulator-test/: CMakeLists.txt  emulation_test.cpp  linux_emulation_test_utils.hpp  network_address_test.cpp  path_port_mapping_test.cpp  thread_scheduler_test.cpp  torture_elf_loader_test.cpp  torture_poll_select_epoll_test.cpp  torture_signals_futex_test.cpp  torture_syscalls_fd_pipe_test.cpp  torture_syscalls_mmap_brk_test.cpp  torture_syscalls_openat_getdents_test.cpp
src/linux-gdb-stub/: CMakeLists.txt  empty.cpp  linux_x64_gdb_stub_handler.hpp  x64_gdb_stub_handler.hpp  x64_register_mapping.hpp  x64_target_descriptions.hpp
src/python-bindings/: CMakeLists.txt  sogen_api_hooks.cpp  sogen_bindings.cpp  sogen_bindings.hpp  sogen_bindings_api_hooks.hpp  sogen_bindings_common.hpp  sogen_bindings_linux_runtime.cpp  sogen_bindings_runtime.cpp  sogen_bindings_types.cpp  sogen_callbacks.cpp  sogen_helpers.cpp  sogen_internal.hpp  sogen_linux_bindings.cpp  sogen_linux_callbacks.cpp  sogen_linux_helpers.cpp  sogen_linux_hooks.cpp  sogen_linux_internal.hpp  sogen_linux_wrappers.cpp  sogen_module.cpp  sogen_wrappers.cpp  test.py  test_linux.py
src/samples/: CMakeLists.txt
src/steam-bridge-protocol/: CMakeLists.txt  steam_bridge_protocol.hpp
src/steam-generated/: .gitignore
src/steam-host-backend/: CMakeLists.txt  steam_host_backend.cpp  steam_host_backend.h  steam_host_runtime.hpp  steam_host_tag.cpp.in  steam_reverse.cpp  steam_reverse.hpp
src/tools/: CMakeLists.txt  create-profile-dirs.ps1  create-root.bat  grab-registry.bat  install-gpu-runtime.ps1  install-steam-shim.ps1
src/vulkan-bridge-marshal/: CMakeLists.txt  vk_bridge_marshal.generated.hxx  vk_bridge_serial.hpp
src/windows-analyzer/: CMakeLists.txt  analysis.cpp  analysis.hpp  analysis_event.hpp  analysis_reporter.cpp  analysis_reporter.hpp  console_reporter.cpp  main.cpp  object_watching.hpp  reflect_extension.hpp  snapshot.cpp  snapshot.hpp  std_include.hpp  stdout_file_reporter.cpp  stdout_file_reporter.hpp  tenet_tracer.cpp
src/windows-emulator/: CMakeLists.txt  cpu_context.cpp  cpu_context.hpp  debug_font.hpp  emulator_thread.cpp  emulator_thread.hpp  emulator_utils.hpp  exception_dispatch.cpp  exception_dispatch.hpp  file_system.hpp  generic_logger.hpp  handles.hpp  io_completion_wait.cpp  io_completion_wait.hpp  io_device.cpp  io_device.hpp  kernel_lock.hpp  kusd_mmio.cpp  kusd_mmio.hpp  logger.cpp  logger.hpp  memory_manager.cpp  memory_manager.hpp  memory_permission_ext.hpp  memory_utils.hpp  minidump_loader.cpp  minidump_loader.hpp  port.cpp  port.hpp  process_context.cpp  process_context.hpp  syscall_dispatcher.cpp  syscall_dispatcher.hpp  syscall_utils.hpp  syscalls.cpp  user_callback_dispatch.hpp  user_handle_table.hpp  win32k_userconnect.cpp  win32k_userconnect.hpp  window_destroy_orchestrator.cpp  (+7 more)
src/windows-emulator-fuzz/: CMakeLists.txt  device_fuzz.cpp  fuzz_target.hpp  libfuzzer_main.cpp  mock_emulator.hpp  standalone_main.cpp
src/windows-emulator-test/: CMakeLists.txt  emulation_test.cpp  emulation_test_utils.hpp  file_system_test.cpp  host_allocation_test.cpp  host_memory_test.cpp  minidump_memory_module_test.cpp  serialization_test.cpp  time_test.cpp  unicode_test.cpp  vulkan_marshal_test.cpp
(+393 files in other folders)
