[build-system]
build-backend = "scikit_build_core.build"
requires = ["scikit-build-core>=0.10", "setuptools-scm[simple]>=8"]

[project]
authors = [{name = "momo5502"}]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
]
description = "Sogen Windows user-space emulator bindings"
dynamic = ["version"]
license = {text = "GPL-2.0-only"}
name = "sogen"
readme = "docs/python/README.md"
requires-python = ">=3.9"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
minimum-version = "0.10"
sdist.include = ["deps/**"]

# LTO/IPO has been observed to break the api_hook intercept's RIP redirect
# inside the UC_HOOK_CODE callback (writes succeed, the readback shows the
# new value, but the unicorn JIT keeps executing the original instruction).
# Disable interprocedural optimization for the wheel build to keep the
# behavior consistent with the dev preset (which has LTO off).
[tool.scikit-build.cmake.define]
SOGEN_ENABLE_LTO = "OFF"

[tool.setuptools_scm]
fallback_version = "0.0.0"
local_scheme = "no-local-version"
